# nodc-station

./: README.md  pyproject.toml
src/nodc_station/: __init__.py  config.py  main.py  station_file.py  utils.py
src/nodc_station/etc/: station.txt
src/nodc_station/etc/readers/: phyche.yaml  shark_master.yaml  stnreg.yaml  text.yaml  xlsx.yaml  yaml.yaml
src/nodc_station/etc/validators/: coordinates_dd.yaml  coordinates_dm.yaml  coordinates_sweref.yaml  mandatory_attributes.yaml  master_attributes.yaml  name_in_master.yaml  position_in_ocean.yaml  position_vs_master.yaml  synonyms_in_master.yaml
src/nodc_station/etc/writers/: map.yaml  shark_master.yaml  stnreg.yaml  validation_log.yaml  xlsx_validation_log.yaml
src/nodc_station/readers/: __init__.py  phyche.py
src/nodc_station/validators/: __init__.py  attributes.py  coordinates.py  identity.py  position.py
src/nodc_station/writers/: __init__.py  map.py  shark_master.py  stnreg.py  validation_log.py
